--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 23px 32px;
   font-family: 'Gentlium Plus', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
